@@ -1,3 +1,9 @@
+2008-05-06  Jens Granseuer  <jensgr@gmx.net>
+
+	* Makefile.am:
+	* appearance-themes.c: (theme_message_area_update): move metatheme
+	validation code to common/gnome-theme-info.c
+
 2008-05-04  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-desktop.c: (desktop_init):
